# AirSense

./: .coverage  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  COMPLETED_TASKS.md  DASHBOARD_IMPROVEMENTS.md  Dockerfile  HOW_TO_RESTART_API.txt  INSTALL_JAVA.md  LICENSE  Makefile  PROJECT_SCOPE_ASSESSMENT.md  README.md  RESTART_API_NOW.md  RUN_SYSTEM.md  RUN_WITHOUT_JAVA.bat  START_HERE_TO_FIX_UPLOAD.txt  UPLOAD_FIX_INSTRUCTIONS.md  backend_simulation.py  docker-compose.yml  process_data_simple.py  pyproject.toml  requirements-dev.txt  requirements.txt  restart_api.bat  restart_api_for_upload.bat  restart_api_simple.ps1  run_backend.bat  run_dashboard.bat  run_system.bat  run_system_powershell.ps1  start_airsense.bat  test_analysis_fix.py  test_upload_endpoint.py
airsense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/processed/: processed_20260506_141745.parquet
data/raw/: beijing_demo.csv
docs/: API_DOCUMENTATION.md  DASHBOARD_GUIDE.md  DEPLOYMENT.md  TROUBLESHOOTING.md
frontend/: dashboard.py
models/: Random Forest_NO2.joblib  Random Forest_PM2.5.joblib  XGBoost_PM2.5.joblib  time_series_models.py
src/: __init__.py  main.py
src/api/: __init__.py  main.py  routes.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/data/: __init__.py  correlation_analysis.py  pandas_processor.py  processor.py  schemas.py  simple_analysis.py  spark_processor.py  time_analysis.py  validator.py
src/models/: __init__.py  evaluation.py  registry.py  simple_forecasting.py  time_series.py
tests/: __init__.py  test_data_processor.py  test_models.py
